<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:context="com.example.android.quizapp.MainActivity">


        <TextView
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:text="@string/Q1"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize" />


        <CheckBox
            android:id="@+id/question1_option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_1"
            android:paddingBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:text="@string/Q1a"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize" />

        <CheckBox
            android:id="@+id/question1_option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/paddingBottom"
            android:layout_below="@+id/question1_option1"
            android:fontFamily="sans-serif"
            android:text="@string/Q1b"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize" />
        <CheckBox
            android:id="@+id/question1_option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/Q1c"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize"
            android:layout_below="@+id/question_1"
            android:layout_alignLeft="@+id/question1_option4"
            android:layout_alignStart="@+id/question1_option4" />
        <CheckBox
            android:id="@+id/question1_option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/paddingBottomNext"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/question1_option1"
            android:fontFamily="sans-serif"
            android:text="@string/Q1d"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize" />


        <TextView
            android:id="@+id/question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question1_option4"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/paddingBottom"

            android:text="@string/Q2"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize" />

        <RadioGroup
            android:id="@+id/question2_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_2"
            android:paddingBottom="@dimen/paddingBottomNext"

            android:fontFamily="sans-serif"
            android:orientation="horizontal"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:fontFamily="sans-serif"
                android:text="True"
                android:textColor="@color/colorQuestion"
                android:textSize="@dimen/textSize" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:checked="false"
                android:fontFamily="sans-serif"
                android:text="False"
                android:textColor="@color/colorQuestion"
                android:textSize="@dimen/textSize" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question2_options"
            android:fontFamily="sans-serif"
            android:text="@string/Q3"
            android:paddingBottom="@dimen/paddingBottom"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize" />

        <RadioGroup
            android:id="@+id/question3_options1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_3"
            android:fontFamily="sans-serif"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingBottomNext"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize">

            <RadioButton
                android:id="@+id/radioButton31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:fontFamily="sans-serif"
                android:paddingBottom="@dimen/paddingBottom"
                android:text="San Francisco"
                android:textColor="@color/colorQuestion"
                android:textSize="@dimen/textSize" />

            <RadioButton
                android:id="@+id/radioButton32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/paddingBottom"
                android:checked="false"
                android:fontFamily="sans-serif"
                android:text="Los Angeles"
                android:textColor="@color/colorQuestion"
                android:textSize="@dimen/textSize" />

            <RadioButton
                android:id="@+id/radioButton33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:paddingBottom="@dimen/paddingBottom"
                android:fontFamily="sans-serif"
                android:text="Oakland"
                android:textColor="@color/colorQuestion"
                android:textSize="@dimen/textSize" />

            <RadioButton
                android:id="@+id/radioButton34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:fontFamily="sans-serif"
                android:text="Sacramento"
                android:textColor="@color/colorQuestion"
                android:textSize="@dimen/textSize" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question3_options1"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/paddingBottom"
            android:text="@string/Q4"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/question4_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_4"
            android:text="your answer here" />


         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submit"
             android:layout_below="@+id/question4_answer"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:onClick="evaluate"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="reset"
            android:layout_below="@+id/question4_answer"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="reset"/>

    </RelativeLayout>
</ScrollView>